test-harness/src/snapshots/toolchain__enum-repr into-coq.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: coq
  info:
    name: enum-repr
    manifest: enum-repr/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: true
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0
stderr = 'Finished `dev` profile [unoptimized + debuginfo] target(s) in XXs'

[stdout]
diagnostics = []

[stdout.files]
"Enum_repr.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.
From Core Require Import Core.



Definition discriminant_EnumWithRepr_ExplicitDiscr1 : t_u16 :=
  (1 : t_u16).

Definition discriminant_EnumWithRepr_ExplicitDiscr2 : t_u16 :=
  (5 : t_u16).

Inductive t_EnumWithRepr : Type :=
| EnumWithRepr_ExplicitDiscr1
| EnumWithRepr_ExplicitDiscr2
| EnumWithRepr_ImplicitDiscrEmptyTuple
| EnumWithRepr_ImplicitDiscrEmptyStruct.
Arguments EnumWithRepr_ExplicitDiscr1.
Arguments EnumWithRepr_ExplicitDiscr2.
Arguments EnumWithRepr_ImplicitDiscrEmptyTuple.
Arguments EnumWithRepr_ImplicitDiscrEmptyStruct.

Definition anon_const_EnumWithRepr_ExplicitDiscr1__anon_const_0 : t_u16 :=
  1.

Definition anon_const_EnumWithRepr_ExplicitDiscr2__anon_const_0 : t_u16 :=
  5.

Definition t_EnumWithRepr_cast_to_repr (x : t_EnumWithRepr) : t_u16 :=
  match x with
  | EnumWithRepr_ExplicitDiscr1 =>
    anon_const_EnumWithRepr_ExplicitDiscr1__anon_const_0
  | EnumWithRepr_ExplicitDiscr2 =>
    anon_const_EnumWithRepr_ExplicitDiscr2__anon_const_0
  | EnumWithRepr_ImplicitDiscrEmptyTuple =>
    f_add (anon_const_EnumWithRepr_ExplicitDiscr2__anon_const_0) (1)
  | EnumWithRepr_ImplicitDiscrEmptyStruct =>
    f_add (anon_const_EnumWithRepr_ExplicitDiscr2__anon_const_0) (2)
  end.

Inductive t_ImplicitReprs : Type :=
| ImplicitReprs_A
| ImplicitReprs_B
| ImplicitReprs_C
| ImplicitReprs_D
| ImplicitReprs_E
| ImplicitReprs_F
| ImplicitReprs_G
| ImplicitReprs_H
| ImplicitReprs_I.
Arguments t_ImplicitReprs:clear implicits.
Arguments t_ImplicitReprs.

Definition anon_const_ImplicitReprs_E__anon_const_0 : t_u64 :=
  30.

Definition t_ImplicitReprs_cast_to_repr (x : t_ImplicitReprs) : t_u64 :=
  match x with
  | ImplicitReprs_A =>
    0
  | ImplicitReprs_B =>
    1
  | ImplicitReprs_C =>
    2
  | ImplicitReprs_D =>
    3
  | ImplicitReprs_E =>
    anon_const_ImplicitReprs_E__anon_const_0
  | ImplicitReprs_F =>
    f_add (anon_const_ImplicitReprs_E__anon_const_0) (1)
  | ImplicitReprs_G =>
    f_add (anon_const_ImplicitReprs_E__anon_const_0) (2)
  | ImplicitReprs_H =>
    f_add (anon_const_ImplicitReprs_E__anon_const_0) (3)
  | ImplicitReprs_I =>
    f_add (anon_const_ImplicitReprs_E__anon_const_0) (4)
  end.

Definition f (_ : unit) : t_u32 :=
  let e_x := cast (f_add (anon_const_EnumWithRepr_ExplicitDiscr2__anon_const_0) (0)) in
  f_add (cast (t_EnumWithRepr_cast_to_repr (EnumWithRepr_ImplicitDiscrEmptyTuple))) (cast (t_EnumWithRepr_cast_to_repr (EnumWithRepr_ImplicitDiscrEmptyStruct))).

Definition f__v_CONST : t_u16 :=
  cast (f_add (anon_const_EnumWithRepr_ExplicitDiscr1__anon_const_0) (0)).

Definition get_repr (x : t_EnumWithRepr) : t_u16 :=
  t_EnumWithRepr_cast_to_repr (x).

Definition get_casted_repr (x : t_EnumWithRepr) : t_u64 :=
  cast (t_EnumWithRepr_cast_to_repr (x)).
'''
_CoqProject = '''
-R ./ TODO
-arg -w
-arg all

Enum_repr.v'''
