test-harness/src/snapshots/toolchain__let-else into-coq.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: coq
  info:
    name: let-else
    manifest: let-else/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Let_else.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.
From Core Require Import Core.



(* NotImplementedYet *)

Definition let_else (opt : t_Option ((t_u32))) : bool :=
  run (match opt with
  | Option_Some (x) =>
     {| ControlFlow_Continue_tuple_field 1 0 := (true : TODO _do_not) |}
  | _ =>
     {| ControlFlow_Break_tuple_field 1 0 := (false : TODO _do_not) |}
  end).

Definition let_else_different_type (opt : t_Option ((t_u32))) : bool :=
  run (let hoist1 := match opt with
  | Option_Some (x) =>
     {| ControlFlow_Continue_tuple_field 1 0 :=  {| Option_Some_0 := f_add (x) ((1 : TODO _do_not)) |} |}
  | _ =>
     {| ControlFlow_Break_tuple_field 1 0 := (false : TODO _do_not) |}
  end in
   {| ControlFlow_Continue_tuple_field 1 0 := let_else (hoist1) |}).
'''
_CoqProject = '''
-R ./ TODO
-arg -w
-arg all

Let_else.v'''
